# geneweb

./: .git-blame-ignore-revs  .gitignore  .ocamlformat  CHANGES  INSTALL  Makefile  README-fabrice.md  configure.ml  dune-project  geneweb.opam
.github/workflows/: ci.yml  doc.yml  release.yml
contrib/gwbase/etc/: Makefile  cache.ml  cache_files.ml  chkimg.ml  clavier.ml  cleopatre.ml  connex.ml  consmoy.ml  dune  fnames.ml  geneanet.ml  gwck.ml  hist.ml  lune.ml  modif.ml  nbdesc.ml  popule.ml  probot.ml  public2.ml  select.ml  selroy.ml  titres.ml  toolhg.ml
contrib/gwdiff/: gwdiff.ml
contrib/gwpublic/: gwdead1.ml  gwiftitles.ml  gwprivate.ml  gwpublic1.ml  gwpublic2.ml  gwpublic2priv.ml
contrib/history/: convert_hist.ml  fix_hist.ml
contrib/oneshot/: dune  new_org.README.txt  new_org.ml
dag2html/: dune  main.ml
etc/: a.gwf  analyze_threshold.sh  geneweb.sh  install-cgi.sh  install-test-base.sh
etc/install-cgi/: gwd.cgi
ged2gwb/: dune  ged2gwb.ml  ged2gwb2.ml  utf8.ml
gui/: gui.ml
gwb2ged/: dune  gwb2ged.ml
gwtp/: dune  gwtp.ml  httpEnv.ml  iolight.ml  recover.ml
hd/etc/: advanced.txt  anccarto.txt  anclist.txt  ancmenu.txt  ancsosa.txt  anctree.txt  buttons.txt  buttons_dag.txt  buttons_fnames.txt  buttons_rel.txt  carrousel.txt  carrousel_display.txt  conf.txt  copyr.txt  cousins.txt  cousins_tools.txt  cousmenu.txt  css.txt  dag.txt  deslist.txt  deslist_hr.txt  desmenu.txt  destable.txt  destree_buttons.txt  fanchart.txt  home.txt  images.txt  index.txt  js.txt  lang.txt  lexcheck.txt  list.txt  menubar.txt  notes_album.txt  notes_gallery.txt  notes_upd_album.txt  notes_upd_gallery.txt  perso.txt  perso_short.txt  perso_utils.txt  (+13 more)
hd/etc/cache/: datalist_place.cache
hd/etc/css/: bootstrap.min.css.map  css.css
hd/etc/js/: fanchart.js  jquery.maphilight.js  relationmatrix.js
hd/etc/modules/: arbre_3gen_photo.txt  arbre_descendants.txt  arbre_famille.txt  arbre_hi_indexes.txt  arbre_vertical.txt  chronologie.txt  individu.txt  notes.txt  relations.txt  sources.txt  unions.txt
hd/etc/perso_module/: unions.txt
hd/etc/plugins/: buttons_places.txt  cmd_carrousel.txt  cmd_fanchart.txt  cmd_places_welcome.txt  lex_plugins.txt  list.txt
hd/etc/rg/: accent4js.txt  accentjs.txt  ancsosa.txt  anctree.txt  css.txt  dag.txt  deslist.txt  desmenu.txt  hed.txt  menubar-sav.txt  menubar.txt  perso.txt  perso_header.txt  perso_short.txt  perso_utils.txt  relmenu.txt  stats.txt  updfam.txt  updhist-xg.txt  updhist.txt  updind.txt  updmenu.txt  welcome.txt  (+2 more)
hd/lang/: lex_utf8.txt  lex_utf8_lt.txt  lexicon.txt  missing-co.txt  missing-de.txt
internal/: database.ml  db2link.ml  def.mli  futil.ml  gutil.ml  gwcomp.ml  gwdb.ml  gwdb.mli  gwuLib.ml  name.ml  templ.camlp5  update.camlp5  util.ml  util.mli
launch/: launch.ml
lib/: GWPARAM.ml  GWPARAM.mli  advSearchOk.ml  advSearchOkDisplay.ml  api.ml  api_saisie_autocomplete.ml  api_saisie_read.ml  api_search.ml  api_update_util.ml  api_util.ml  api_wiki.ml  birthDeathDisplay.ml  changeChildren.ml  changeChildrenDisplay.ml  check.ml  checkData.ml  checkData.mli  checkDataDisplay.ml  checkItem.ml  config.ml  config.mli  cousins.ml  cousinsDisplay.ml  dag.ml  dag2html.ml  dag2html.mli  dagDisplay.ml  database.ml  date.ml  db1link.ml  descendDisplay.ml  dune.in  fixbase.ml  fixbase.mli  fnameCache.ml  forum.ml  forumDisplay.ml  gutil.ml  gutil.mli  gwDaemon.ml  (+81 more)
lib/core/: consang.ml  consang.mli  consangAll.ml  consangAll.mli
lib/db/: database.ml  driver.ml  outbase.ml  outbase.mli
lib/def/: def.ml
lib/gwdb-legacy/: database.ml  dbdisk.mli  gwdb_driver.ml  outbase.ml
lib/gwdb.mli/: gwdb.mli
lib/gwdb1/: database.ml  outbase.ml
lib/gwdb_driver.mli/: gwdb_driver.mli
lib/gwxjg/: data.ml  ezgw.ml
lib/search/: analyze.ml  dune  index.ml  index.mli
lib/show/: def_show.mli
lib/util/: dune.in  futil.ml  lock.ml  mutil.ml  mutil.mli  name.ml  name.mli  secure.ml  secure.mli  utf8.ml  utf8.mli
lib/wserver/: pool.ml  util.ml  wserver.ml
plugins/carrousel/: META  dune  plugin_carrousel.ml
plugins/doc/: plugin_doc.ml
plugins/export/: dune  plugin.ml  plugin_export.ml
plugins/fanchart/: META  dune  plugin_fanchart.ml
plugins/fixbase/: plugin_fixbase.ml
plugins/forum/: forum.ml  forumDisplay.ml  plugin_forum.cppo.ml
plugins/gwxjg/: data.ml  dune  gwxjg_data.ml  gwxjg_ezgw.ml
plugins/otherfn/: dune  plugin_otherfn.ml
plugins/otherfn_p/: dune  plugin_otherfn_p.ml
plugins/otherfn_s/: README.md  plugin_otherfn_s.ml
plugins/places/: dune  plugin_places.ml
plugins/v7/: V7_dag.ml  dune  plugin_v7.ml  v7_ascendDisplay.ml  v7_cousins.ml  v7_dag2html.ml  v7_dag2html.mli  v7_dagDisplay.ml  v7_date.ml  v7_descend.ml  v7_descendDisplay.ml  v7_interp.ml  v7_perso.ml  v7_place.ml  v7_relation.ml  v7_relationDisplay.ml  v7_relationLink.ml  v7_relationLink.mli  v7_searchName.ml  v7_some.ml  v7_srcfile.ml  v7_templ.ml  v7_updateDataDisplay.ml
plugins/v7_im/: v7_im_sendImage.ml
plugins/v8/: dune  plugin.ml  plugin_v8.ml
plugins/welcome/: plugin_welcome.ml
plugins_new/carrousel/: README.md  plugin_carrousel.ml
plugins_new/doc/: README.md  dune  plugin_doc.ml
plugins_new/fanchart/: dune
plugins_new/otherfn_p/: README.md
plugins_new/otherfn_s/: dune
plugins_new/places/: README.md  dune  plugin_places.ml
rpc/lib/: service.ml
rpc/test/: autocomplete.html  autocomplete.js  test-autocomplete.html
setup/: dune  setup.ml
src/: adef.ml  adef.mli  advSearchOk.ml  alln.ml  ansel.ml  argl.ml  base64.ml  birthDeath.ml  birthday.ml  calendar.ml  changeChildren.ml  check.ml  check.mli  checkItem.ml  checkItem.mli  check_base.ml  config.mli  consangAll.ml  cousins.ml  dag.ml  database.ml  database.mli  date.ml  date.mli  db1disk.ml  db1disk.mli  db1link.ml  db1out.ml  db1out.mli  db2disk.ml  db2disk.mli  db2link.ml  db2link.mli  db2out.ml  db2out.mli  def.mli  descend.ml  diff.mli  doc.ml  dune  (+87 more)
test/: dune.in  name_test.ml  run-GW-test.sh  run_gw_test.sh  test-00.gwf  test.gw  test.ml  test.sh  test_utils.ml  test_wiki.ml  util_test.ml  wiki_test.ml
wserver/: dune  wserver.ml  wserver.mli
(+71 files in other folders)
