opam-version: "2.0"
name: "geneweb"
version: "1.0"
license: "GPL-2.0-only"
synopsis: "Genealogy software with web interface"
description: """
Geneweb allows keeping track of ancestral data. It is a powerful
 system for maintaining a set of data about your family history. It
 supports much of the GEDCOM tag system for data storage, and can be
 used either as your primary system for archiving genealogical data,
 or as a web service (through a CGI interface) for publishing your
 data for others to use."""
authors: ["Daniel De Rauglaudre <daniel.de_rauglaudre@inria.fr>"]
bug-reports: "https://github.com/geneweb/geneweb/issues"
dev-repo: "git+https://github.com/geneweb/geneweb.git"
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.10.0"}
  "camlp5" {= "7.14"}
  "ocamlfind"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [ make ]
]
install: [ "make" "install" "PREFIX=%{prefix}%" ]
