(ocamllex lexicon_parser)

(library
  (name gwxjg)
  (wrapped true)
  (libraries geneweb jingoo unix geneweb-gwdb-legacy geneweb-sosa geneweb-wserver)
  (flags (:standard -w -42-40))
  (modules ezgw data trans lexicon_parser)
)

(executable
  (name plugin_gwxjg)
  (embed_in_plugin_libraries gwxjg)
  (flags -linkall)
  (modes (native plugin))
  (modules plugin_gwxjg)
)
